# CDE2310_G10_2526

./: .gitignore  .pr_agent.toml  CHANGELOG.md  README.md
.github/workflows/: pr_agent.yml
CAD/Turtlebot Assembly/: First Layer.SLDASM  Fourth Layer.SLDASM  Second Layer.SLDASM  Third Layer.SLDASM  Waffle Layer.SLDASM  Waffle Layer2.SLDASM  helix standoffs pressfit tester.SLDPRT  helix tube storage.SLDPRT  launcher-assembly.SLDASM  launcher-main-body.SLDPRT  launcher-pusher.SLDPRT  pinion gear assembly-as-part-v2.SLDPRT  pinion gear assembly.SLDASM  pinion gear full assembly.SLDASM  pinion-servo-horn-attachment-for-gear.SLDPRT  pinion-servo-horn-attachment-mount.SLDPRT  rack-as-part-v2.SLDPRT  rpi camera assembly v2.SLDASM  rpi camera assembly.SLDASM  rpi camera mount v2.SLDPRT  rpi camera mount.SLDPRT  rpi camera stand v2.SLDPRT  rpi camera stand.SLDPRT  spring.SLDPRT
CAD/Turtlebot Assembly/draft/: pinion gear assembly-as-part.SLDPRT  pinion gear.SLDPRT  rack-as-part.SLDPRT
CAD/Turtlebot Assembly/drawing/: helix tube storage.SLDDRW  launcher-main-body.SLDDRW  rack-as-part-v2.SLDDRW  rpi camera mount.SLDDRW  rpi camera stand.SLDDRW
CAD/Turtlebot Assembly/slicer/: camera stand, mount, rack & pinion.3mf  helix tube storage.3mf  launcher-main-body.3mf
CAD/Turtlebot Assembly/stl files/: helix standoffs pressfit tester.STL  helix tube storage.STEP  helix tube storage.STL  launcher-main-body.STL  rpi camera mount v2.STL  rpi camera stand v2.STL
FSM/: fsm_code.py
Marker/: Pose_Subscriber.py  Pose_publisher_TF2.py
Navigation/ROS2-FrontierBaseExplorationForAutonomousRobot/: README.md
Navigation/turtlebot3_edic/: README.md
Shooter/: Payload_Delivery.py
remote_laptop_src/: launch_auto_explore.sh  package.xml  setup.py
remote_laptop_src/auto_explore/: exploration_controller.py  mission_controller.py  package.xml  setup.cfg  setup.py
remote_laptop_src/auto_explore/auto_explore/: pose_publisher.py  pose_subscriber.py
remote_laptop_src/auto_explore/launch/: global_bringup.py  global_controller_bringup.py
remote_laptop_src/auto_explore/resource/: auto_explore
remote_laptop_src/config/: params.yaml
remote_laptop_src/launch/: nav_bringup.py
(+34 files in other folders)
